# llama-suite

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  config.base.yaml  config.effective.yaml  install.bat  install.py  install.sh  llama_swap_watch.py  models  pyproject.toml  pytest.ini  run_server.ps1  run_server.sh  uninstall.bat  uninstall.py  update.py
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
bench/: benchmark-models.py  benchmark_models.ps1  benchmark_models.sh  benchmark_results.csv  benchmark_results_20250507.csv  benchmark_results_Desktop_20250529.csv  benchmark_results_mac_5255.csv  benchmark_results_mac_5293.csv  benchmark_results_memory.xlsx  benchmark_results_memory_Desktop.xlsx  benchmark_results_memory_mac.csv  memory_scan_results.csv  scan_model_memory.py
bench/bench/: benchmark_results.csv  benchmark_results_20250811_204743.csv
bench/scan/: scan_results.csv
configs/: config.base.yaml  config.base.yaml.bak
configs/overrides/: mac-m3-max-36G.yaml  win-3080-10G-no-slow-models.yaml  win-3080-10G.yaml  win-5090.yaml
custom-bench/: bench  tasks.jsonl
custom-eval/: eval.py  graph.py  tasks.jsonl
datasets/: wikitext-2-raw-v1_test.txt
datasets/custom/: tasks-short.jsonl  tasks.jsonl
deploy/compose/: .env.example  docker-compose.yml
deploy/orbstack/: README.md  start.command  stop.command
docs/: releasing.md
docs/design/: cloud-gitops-refactor.md
eval/: evaluate-models.py
eval/results/: eval_summary_20250507 2.csv  eval_summary_20250507.csv  eval_summary_2025_05_08_02_16_35.csv  eval_summary_2025_05_08_12_12_48.csv  (+1 more)
model-configs/: config-desktop.yaml  config-mac.yaml
overrides/: mac-m3-max-36G.yaml  win-3080-10G.yaml
tests/: test_config_utils.py  test_health_timeout_override.py  test_hf_fetch_models_selection.py  test_opencode_proxy.py  test_openwebui.py  test_runtime_registry.py  test_sweeps_variant_generation.py  test_task_output_steps.py  test_webui_auth.py  test_webui_config_effective.py  test_webui_config_studio.py  test_webui_controls_guardrails.py  test_webui_gitops_mode.py  test_webui_memory_scan.py  test_webui_models_create_defaults.py  test_webui_system_info.py
tools/: restart-on-config-change.ps1  restart-on-config-change.sh
utils/: config_utils.py  custom_lm_eval_models.py
(+151 files in other folders)
